libgphoto2 2.5.27.1 development snapshot

ptp2:
* olympus: wait time was twice as long as required if no events arrived
* Sigma Fp: added basic beta support for capture, live view and config.
* Canon EOS: handle newer EOS R series reporting of configs (ISO, Aperture, Shutterspeed)
* fuji:
  * ptpip improvements
  * bug fixes
  * some Fuji cameras have now liveview only for webcam (need new firmware)
* various small fixes
* New ids:
  * Sony Alpha-RX1R II, ILCE-7C
  * Nikon Coolpix B500
  * Canon EOS M50m2
  * Fuji X-Pro3, GFX 100S, X100V

------------------------------------------------------------------------------
libgphoto2 2.5.27 release

ptp2:
* report filesizes larger than 4GB correctly
* download files larger than 4GB
* empty ptp strings are reported as "", not as NULL
* report more MTP object properties
* Nikon
  * download of files larger than 4GB using getpartial object method
  * handle new application mode
  * handle new eventex fetcher on Z series
  * fixed movie on recent Z series
  * report liveview and movie prohibit conditions, as errors and also in configuration tree
  * some Nikon 1 V1 enhancements (the first camera of the 1 series is a bit special)
* report filesize > 4GB correctly, if possible
* Canon EOS:
  * EOS M6 Mark 2 is actually more like a EOS DSLR and fully capable, added some work
  * Handle OLCINFO for M6 Mark 2 and EOS R5 and new cameras
  * added current list of autoexposuremode to expose also Fv and friends
  * Canon Liveview size is encoded in "output" (PC / MOBILE / MOBILE2 variants are the different livesizes), try to expose seperately as "liveviewsize"
  * decode more options, nickname, eosmoviemode (color/bw), strobofiring, eventmode, flashcharged, oneshotrawon
  * bugfixes
* Sony Alpha:
  * report f-numbers enum with fixed list
  * fixed liveview taking on a new model
* Panasonic
  * implement liveviewsize
  * implement movie recording ( using --set-config movie=1/0 )
  * more doc and minor fixes