@@ -1,19 +1,0 @@
-30-7-2000
-bvl: initial release
-about this Document:
-
-This document is a summary of what is needed to build gphoto2 on OS/2
-
-make      : nmake v3 available on hobbes,
-            http://hobbes.nmsu.edu/pub/os2/dev/util/nmakew.zip
-
-compile   : gcc version 2.8.1
-            http://hobbes.nmsu.edu/cgi-bin/h-browse?sh=1&dir=/pub/os2/dev/emx/v0.9d
-
-libraries : pthreads
-            unfortunately I don't know whih version I use here but the one from netlabs should be working
-            ftp://ftp.netlabs.org/pub/pthreads/
-
-make sure the emx\lib directory is added to your lib environment 'SET LIB=x:\EMX\LIB'
-else the pthreads DLL's and LIB's should be in the EMX tree
-
