@@ -42,12 +42,12 @@ command line and, if dealing with USB problems, setting the environment variable
 \fBCAMLIBS\fR
 If set, defines the directory where the
 libgphoto2
-library looks for its camera drivers (camlibs). You only need to set this on OS/2 systems and broken/test installations.
+library looks for its camera drivers (camlibs). You only need to set this on Windows systems and broken/test installations.
 .TP
 \fBIOLIBS\fR
 If set, defines the directory where the
 libgphoto2_port
-library looks for its I/O drivers (iolibs). You only need to set this on OS/2 systems and broken/test installations.
+library looks for its I/O drivers (iolibs). You only need to set this on Windows systems and broken/test installations.
 .TP
 \fBLD_DEBUG\fR
 Set this to
