@@ -42,7 +42,7 @@ docs will be added here in the future.
 \fBIOLIBS\fR
 If set, defines the directory where the
 libgphoto2_port
-library looks for its I/O drivers (iolibs). You only need to set this on OS/2 systems and broken/test installations.
+library looks for its I/O drivers (iolibs). You only need to set this on Windows systems and broken/test installations.
 .TP
 \fBLD_DEBUG\fR
 Set this to
